changes for yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,10 @@ jobs:
 
       # Download and cache dependencies
 
+      - run: python -v
       - run:
           name: install dependencies
-          command: |
-            run python -v
+          command: |            
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
